--- a/gamma/index.html
+++ b/gamma/index.html
@@ -74,7 +74,6 @@
 				</ul>
 				<h5>Participants:</h5>
 				<ul class="ms-4">
-					<li>Mikołaj Duch (University of Warsaw)</li>
 					<li>Tymon Frelik (University of Warsaw)</li>
 					<li>Jordi Gaset Rifà (Polytechnic University of Madrid)</li>
 					<li>Jacek Wojciech Hann (University of Warsaw)</li>
@@ -83,6 +82,7 @@
 					<li>Adam Maskalaniec (University of Warsaw)</li>
 					<li>Maksym Matviienko (University of Warsaw)</li>
 					<li>Marek Morawski (University of Warsaw)</li>
+					<li>Tomasz Sobzak (University of Warsaw)</li>
 					<li>Silvia Souto (University of Santiago de Compostela)</li>
 					<li>Daniel Torres (Polytechnic University of Catalonia)</li>
 					<li>Krzysztof Jan Wolicki (University of Warsaw)</li>
@@ -96,6 +96,78 @@
 			<div class="row">				
 
 				<h3 class="blue">&#9632; Conferences</h3>
+				
+				<h4 class="blue mb-3 mt-3">Fall 2023</h4>
+
+
+				<div class="accordion" id="accordionExample">
+					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading18">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse18" aria-expanded="false" aria-controls="collapse18">
+								<h5>TBA
+								<br>
+								Tomasz Sobzak &#8213; 26/10/2023, 21:00</h5>
+							</button>
+						</h3>
+						<div id="collapse18" class="accordion-collapse collapse" aria-labelledby="heading18" data-bs-parent="#accordionExample">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">TBA</p>
+								<!--<strong>Link to the video: </strong><a href='https://youtu.be/Xgs2YiYoLsg' target="_blank">Julia Lange --- Slicing of Hamiltonian systems</a>-->
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading17">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse17" aria-expanded="false" aria-controls="collapse17">
+								<h5>Introduction to Lie Systems with Compatible Geometric Structures III
+								<br>
+								Javier de Lucas &#8213; 19/10/2023, 21:00</h5>
+							</button>
+						</h3>
+						<div id="collapse17" class="accordion-collapse collapse" aria-labelledby="heading17" data-bs-parent="#accordionExample">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">This course surveys some of the most relevant geometric structures appearing in modern differential geometric theories: Poisson, symplectic, Dirac, Jacobi, multisymplectic, and k-symplectic manifolds. Next, we introduce the notion of Lie system, i.e. a nonautonomous system of first-order differential equations whose general solution can be described as a function, the superposition rule, of a particular generic family of particular solutions and some constants. The use of geometric structures for the calculation of superposition rules and constants of motion for Lie systems is to be analysed. Applications of the theory to systems of ordinary and partial differential equations of physical and mathematical relevance will be studied. Among other applications, we plan to look into nonautonomous frequency Smorodinsky-Winternitz oscillators, types of diffusion equations, and Backlund transformations for sine-Gordon equations.</p>
+								<!--<strong>Link to the video: </strong><a href='https://youtu.be/Xgs2YiYoLsg' target="_blank">Julia Lange --- Slicing of Hamiltonian systems</a>-->
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading16">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse16" aria-expanded="false" aria-controls="collapse16">
+								<h5>Introduction to Lie Systems with Compatible Geometric Structures II
+								<br>
+								Javier de Lucas &#8213; 12/10/2023, 21:00</h5>
+							</button>
+						</h3>
+						<div id="collapse16" class="accordion-collapse collapse" aria-labelledby="heading16" data-bs-parent="#accordionExample">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">This course surveys some of the most relevant geometric structures appearing in modern differential geometric theories: Poisson, symplectic, Dirac, Jacobi, multisymplectic, and k-symplectic manifolds. Next, we introduce the notion of Lie system, i.e. a nonautonomous system of first-order differential equations whose general solution can be described as a function, the superposition rule, of a particular generic family of particular solutions and some constants. The use of geometric structures for the calculation of superposition rules and constants of motion for Lie systems is to be analysed. Applications of the theory to systems of ordinary and partial differential equations of physical and mathematical relevance will be studied. Among other applications, we plan to look into nonautonomous frequency Smorodinsky-Winternitz oscillators, types of diffusion equations, and Backlund transformations for sine-Gordon equations.</p>
+								<!--<strong>Link to the video: </strong><a href='https://youtu.be/Xgs2YiYoLsg' target="_blank">Julia Lange --- Slicing of Hamiltonian systems</a>-->
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading15">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse15" aria-expanded="false" aria-controls="collapse15">
+								<h5>Introduction to Lie Systems with Compatible Geometric Structures I
+								<br>
+								Javier de Lucas &#8213; 05/10/2023, 21:00</h5>
+							</button>
+						</h3>
+						<div id="collapse15" class="accordion-collapse collapse" aria-labelledby="heading15" data-bs-parent="#accordionExample">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">This course surveys some of the most relevant geometric structures appearing in modern differential geometric theories: Poisson, symplectic, Dirac, Jacobi, multisymplectic, and k-symplectic manifolds. Next, we introduce the notion of Lie system, i.e. a nonautonomous system of first-order differential equations whose general solution can be described as a function, the superposition rule, of a particular generic family of particular solutions and some constants. The use of geometric structures for the calculation of superposition rules and constants of motion for Lie systems is to be analysed. Applications of the theory to systems of ordinary and partial differential equations of physical and mathematical relevance will be studied. Among other applications, we plan to look into nonautonomous frequency Smorodinsky-Winternitz oscillators, types of diffusion equations, and Backlund transformations for sine-Gordon equations.</p>
+								<!--<strong>Link to the video: </strong><a href='https://youtu.be/Xgs2YiYoLsg' target="_blank">Julia Lange --- Slicing of Hamiltonian systems</a>-->
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<h4 class="blue mb-3 mt-3">Spring 2023</h4>
 
 				<div class="accordion" id="accordionExample">
 					<div class="accordion-item">
