--- a/18ywgmc/index.html
+++ b/18ywgmc/index.html
@@ -14,44 +14,54 @@
 </head>
 <body>
 
-<!--
-	<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-		<div class="container">
-
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarNavDropdown">
-				<ul class="navbar-nav">
-					<li class="nav-item active">
-						<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Location</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Schedule</a>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</nav>
--->
-
-<div class="container-fluid head mb-4">
+<div class="container-fluid head">
 	<div class="container pt-5">
-		<h1 class="display-3"><strong>XVIII International Young Researchers Workshop in Geometry, Mechanics and Control</strong></h1>
+		<h1 class="display-4 main-title text-center"><strong>XVIII International Young Researchers Workshop in Geometry, Mechanics and Control</strong></h1>
 	</div>
 </div>
-<div class="container">
 
-	<p class="lead">The 18th Young Researchers Workshop in Geometry, Mechanics, and Control is a yearly event to promote young researchers in the field of differential geometry and its relations to mechanics and control theory. The 18th edition will take place in Warsaw. This event offers researchers in the field, especially to the younger participants, a platform to share their latest results to an international audience and discuss current topics. The workshop will contain three mini-courses in key topics in the field, selected talks proposed by the participants, and a poster session.</p>
+<nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary mx-0 my-0">
+  <div class="container my-0">
+    <!-- <a class="navbar-brand" href="#">Navbar</a> -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ml-auto-custom"> <!-- Custom class for right alignment -->
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Welcome</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./registration/index.html" aria-disabled="true">Registration</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./program/index.html" aria-disabled="true">Program</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./schedule/index.html" aria-disabled="true">Schedule</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./participants/index.html" aria-disabled="true">Participants</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" aria-disabled="true">Travel and accomodation</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+
+
+
+<div class="container mt-3">
+	<p class="lead">The 18th Young Researchers Workshop in Geometry, Mechanics, and Control is a yearly event to promote young researchers in the field of differential geometry and its relations to mechanics and control theory. The 18th edition will take place in the University of Warsaw. This event offers researchers in the field, especially to the younger participants, a platform to share their latest results to an international audience and discuss current topics. The workshop will contain three mini-courses in key topics in the field, selected talks proposed by the participants, and a poster session.</p>
 
 	<h3>Location and dates:</h3>
 	<ul>
-		<li><strong>Where:</strong> Warsaw, Poland</li>
+		<li><strong>Where:</strong> Room 1.03. Faculty of Physics, University of Warsaw, Poland.</li>
 		<li><strong>When:</strong> February 21-23, 2024</li>
-		<li><strong>How:</strong> Registration opens in November</li>
+		<li><strong>How:</strong> Registration opens in October</li>
 		<li><strong>Other questions?</strong> Contact us at <a href = "mailto: 18ywgmc@gmail.com">18ywgmc(at)gmail.com</a></li>
 	</ul>
 	
@@ -64,22 +74,23 @@
 
 	<h3>Organizing comitee:</h3>
 	<ul>
-		<li>Javier de Lucas (Uniwersytet Warszawski) javier.de.lucas@fuw.edu.pl</li>
-		<li>Xavier Rivas (Universidad Internacional de La Rioja) xavier.rivas(at)unir.net</li>
-		<li>Bartosz M. Zawora (Uniwersytet Warszawski) b.zawora@uw.edu.pl</li>
-		<li>Julia Lange (Uniwersytet Warszawski) j.lange2@uw.edu.pl</li>
+		<li><a href="https://delucasaraujo.wixsite.com/uniwersytet" target="_blank">Javier de Lucas</a> (University of Warsaw, Poland)</li>
+		<li><a href="https://xavirivas.com/" target="_blank">Xavier Rivas</a> (International University of La Rioja, Spain)</li>
+		<li>Bartosz M. Zawora (University of Warsaw, Poland)</li>
+		<li>Julia Lange (University of Warsaw, Poland)</li>
+		<li>Adam Maskalaniec (University of Warsaw, Poland)</li>
 	</ul>
 	
 	<h3>Scientific comitee:</h3>
 	<ul>
-		<li dir="ltr"> <a href="http://dma.aq.upm.es/profesor/barbero_m/" target="_blank" rel="noopener noreferrer">María Barbero</a> (Universidad Politécnica de Madrid, Spain)</li>
-		<li dir="ltr"> Cédric M. Campos (Universidad Rey Juan Carlos, Spain)</li>
-		<li dir="ltr"> <a href="https://www.uni-math.gwdg.de/mjotz/home.html" target="_blank" rel="noopener noreferrer">Madeleine Jotz Lean</a> (Georg-August Universität Göttingen, Germany)</li>
-		<li dir="ltr"> <a href="http://www.lmd.ens.fr/gay-balmaz/Home.html" target="_blank" rel="noopener noreferrer">François Gay-Balmaz</a> (CNRS, École Normale Supérieure, France)</li>
-		<li dir="ltr"> <a href="https://mast.queensu.ca/~bahman/" target="_blank" rel="noopener noreferrer">Bahman Gharesifard</a> (Queen&#8217;s University, Canada)</li>
-		<li dir="ltr"> <a href="https://smp.uq.edu.au/profile/5992/ramiro-lafuente" target="_blank" rel="noopener noreferrer">Ramiro Lafuente </a> (The University of Queensland, Australia)</li>
-		<li dir="ltr"> <a href="http://scala.uc3m.es/juanmargalef/" target="_blank" rel="noopener noreferrer">Juan Margalef </a> (Penn State&#8217;s University, USA)</li>
-		<li dir="ltr"> <a href="https://www.ltd.tf.fau.de/person/rodrigo-takuro-sato-martin-de-almagro/" target="_blank" rel="noopener noreferrer">Rodrigo T. Sato Martín de Almagro </a> (Friedrich-Alexander-Universität Erlangen-Nürnberg, Germany)</li>
+		<li dir="ltr"><a href="http://dma.aq.upm.es/profesor/barbero_m/" target="_blank" rel="noopener noreferrer">María Barbero</a> (Universidad Politécnica de Madrid, Spain)</li>
+		<li dir="ltr"><a href="https://sites.google.com/view/aronna/home?pli=1" target="_blank">Soledad Arona</a> (Escola de Matemática Aplicada, Rio de Janeiro, Brazil)</li>
+		<li><a href="https://tobiasdiez.de/" target="_blank">Tobias Diez</a> (Shanghai Jiao Tong University, China)</li>
+		<li><a href="https://gharesifard.github.io/" target="_blank">Bahman Gharesifard</a> (University of California, USA)</li>
+		<li><a href="https://www.mathematik.uni-wuerzburg.de/geometry/team/jotz-lean-madeleine/" target="_blank">Madeleine Jotz Lean</a> (Julius-Maximilians-Universität Würzburg, Germany)</li>
+		<li><a href="https://smp.uq.edu.au/profile/5992/ramiro-lafuente" target="_blank">Ramiro Lafuente</a> (The University of Queensland, Australia)</li>
+		<li><a href="https://scala.uc3m.es/juanmargalef/" target="_blank">Juan Margalef</a> (Memorial University, Canada)</li>
+		<li><a href="https://www.ltd.tf.fau.de/person/rodrigo-takuro-sato-martin-de-almagro/" target="_blank">Rodrigo T. Sato Martín de Almagro</a> (Friedrich-Alexander-Universität Erlangen-Nürnberg, Germany)</li>
 	</ul>
 
 	<h3>Previous editions</h3>
@@ -95,12 +106,34 @@
 		<li dir="ltr"><a href="https://team.inria.fr/mctao/10th-international-young-researcher-workshop-on-geometry-mechanics-and-control-january-13-15-2016/" target="_blank" rel="noopener noreferrer"> </a><a href="https://iuma.unizar.es/en/node/217" target="_blank" rel="noopener noreferrer"> IX edition </a></li>
 	</ul>
 
+	<h3>Financial support</h3>
+	<div class="container">
+		<div class="row">
+			<div class="col-sm m-2">
+				<img src="img/idub.svg" class="img-fluid" alt="...">
+			</div>
+			<div class="col-sm m-2">
+				<img src="img/fuw-logo.jpg" class="img-fluid" alt="...">
+			</div>
+			<div class="col-sm m-2">
+				<img src="img/uw-logo-pl.png" class="img-fluid" alt="...">
+			</div>
+		</div>
+		<div class="row text-center">
+			<div class="col-sm m-2">
+				<img src="img/gmc.png" class="img-fluid" alt="...">
+			</div>
+		</div>
+	</div>
+	
+	
+
 </div>
 
-<div class="container-fluid footer">
-	<div class="container">
-		<h4>Contact information:</h4>
-		<p>18ywgmc(at)gmail.com</p>
+<div class="container-fluid footer mt-5 pt-3 pb-1">
+	<div class="container text-center">
+		<p class="fs-6">XVIII International Young Researchers Workshop in Geometry, Mechanics and Control<br>
+		18ywgmc(at)gmail.com</p>
 	</div>
 </div>
 
