--- a/gamma/index.html
+++ b/gamma/index.html
@@ -82,7 +82,7 @@
 					<li>Adam Maskalaniec (University of Warsaw)</li>
 					<li>Maksym Matviienko (University of Warsaw)</li>
 					<li>Marek Morawski (University of Warsaw)</li>
-					<li>Tomasz Sobzak (University of Warsaw)</li>
+					<li>Tomasz Sobczak (University of Warsaw)</li>
 					<li>Silvia Souto (University of Santiago de Compostela)</li>
 					<li>Daniel Torres (Polytechnic University of Catalonia)</li>
 					<li>Krzysztof Jan Wolicki (University of Warsaw)</li>
@@ -102,11 +102,27 @@
 
 				<div class="accordion" id="accordionExample">
 					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading19">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse19" aria-expanded="false" aria-controls="collapse19">
+								<h5>TBA
+								<br>
+								Tomasz Sobczak &#8213; 02/11/2023, 21:00</h5>
+							</button>
+						</h3>
+						<div id="collapse19" class="accordion-collapse collapse" aria-labelledby="heading19" data-bs-parent="#accordionExample">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">TBA</p>
+								<!--<strong>Link to the video: </strong><a href='https://youtu.be/Xgs2YiYoLsg' target="_blank">Julia Lange --- Slicing of Hamiltonian systems</a>-->
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading18">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse18" aria-expanded="false" aria-controls="collapse18">
 								<h5>TBA
 								<br>
-								Tomasz Sobzak &#8213; 26/10/2023, 21:00</h5>
+								Adam Maskalaniec &#8213; 26/10/2023, 21:00</h5>
 							</button>
 						</h3>
 						<div id="collapse18" class="accordion-collapse collapse" aria-labelledby="heading18" data-bs-parent="#accordionExample">
