--- a/18ywgmc/index.html
+++ b/18ywgmc/index.html
@@ -16,7 +16,7 @@
 
 <div class="container-fluid head">
 	<div class="container pt-5">
-		<h1 class="display-4 main-title text-center"><strong>XVIII International Young Researchers Workshop in Geometry, Mechanics and Control</strong></h1>
+		<h1 class="display-4 main-title text-center"><strong>XVIII International Young Researchers Workshop in Geometry, Dynamics and Field Theory</strong></h1>
 	</div>
 </div>
 
@@ -44,7 +44,7 @@
           <a class="nav-link" href="./participants/index.html" aria-disabled="true">Participants</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Travel and accomodation</a>
+          <a class="nav-link" href="./travel-accomodation/index.html" aria-disabled="true">Travel and accomodation</a>
         </li>
       </ul>
     </div>
@@ -55,7 +55,7 @@
 
 
 <div class="container mt-3">
-	<p class="lead">The 18th Young Researchers Workshop in Geometry, Mechanics, and Control is a yearly event to promote young researchers in the field of differential geometry and its relations to mechanics and control theory. The 18th edition will take place in the University of Warsaw. This event offers researchers in the field, especially to the younger participants, a platform to share their latest results to an international audience and discuss current topics. The workshop will contain three mini-courses in key topics in the field, selected talks proposed by the participants, and a poster session.</p>
+	<p class="lead">The 18th Young Researchers Workshop in Geometry, Dynamics and Field Theory is a yearly event to promote young researchers in the field of differential geometry and its relations to dynamics and field theory. The 18th edition will take place in the University of Warsaw. This event offers researchers in the field, especially to the younger participants, a platform to share their latest results to an international audience and discuss current topics. The workshop will contain three mini-courses in key topics in the field, selected talks proposed by the participants, and a poster session.</p>
 
 	<h3>Location and dates:</h3>
 	<ul>
@@ -132,7 +132,7 @@
 
 <div class="container-fluid footer mt-5 pt-3 pb-1">
 	<div class="container text-center">
-		<p class="fs-6">XVIII International Young Researchers Workshop in Geometry, Mechanics and Control<br>
+		<p class="fs-6">XVIII International Young Researchers Workshop in Geometry, Dynamics and Field Theory<br>
 		18ywgmc(at)gmail.com</p>
 	</div>
 </div>
