--- a/18ywgmc/travel-accomodation/index.html
+++ b/18ywgmc/travel-accomodation/index.html
@@ -33,7 +33,7 @@
           <a class="nav-link" aria-current="page" href="./../index.html">Welcome</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="./../registration/index.html" aria-disabled="true">Registration</a>
+          <a class="nav-link" href="./../registration/index.html" aria-disabled="true">Registration</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="./../program/index.html" aria-disabled="true">Program</a>
@@ -45,7 +45,7 @@
           <a class="nav-link" href="./../participants/index.html" aria-disabled="true">Participants</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./../travel-accomodation/index.html" aria-disabled="true">Travel and accomodation</a>
+          <a class="nav-link active" href="./../travel-accomodation/index.html" aria-disabled="true">Travel and accomodation</a>
         </li>
       </ul>
     </div>
@@ -56,17 +56,43 @@
 <div class="container mt-3">
 
 
-	<h1 class="mb-3">Registration</h1>
+	<h1 class="mb-3">Travel and accomodation</h1>
 
-  <h4>Important dates</h4>
+  <h3 class="my-4">How to reach us</h3>
+
+  <p>The <a href="https://www.fuw.edu.pl/" target="_blank">Faculty of Physics</a> of the <a href="https://en.uw.edu.pl/" target="_blank">University of Warsaw</a> is in <a href="https://maps.app.goo.gl/nY6qrgEo3nPAKbkP7" target="_blank">Ludwika Pasteura 5, 02-093 Warsaw, Poland.</a> The conference will take place in Room 1.03, in the first floor.</p>
+
+  <h3 class="my-4">Hotels</h3>
+
   <ul>
-    <li><p><strong>Deadline for registration:</strong> January 15, 2024. <a href="https://forms.gle/QmSoPQWN47HE7jCr9" target="_blank">Click here to register</a>.</p>
-    <li><p><strong>Deadline to apply for a scholarship:</strong> November 30, 2023.</p></li>
-    <p>If you want to apply for a scholarship to cover the costs of the travel/accomodation, send an email to <a href="mailto:18ywgmc@gmail.com">18ywgmc(at)gmail.com</a> after registering, attaching your CV.</p></li>
-    <li><p><strong>Deadline for submitting abstracs for talks and posters:</strong> December 15, 2023.</p>
-    <p>Send your title and abstract to <a href="mailto:18ywgmc@gmail.com">18ywgmc(at)gmail.com</a>. Only a limited number of short talks will be accepted. The scientific comitee will select them after the deadline date.</p></li>
+    <li>
+      <a href="http://enhera.strony.uw.edu.pl/" target="_blank">Hera Guest House</a>
+    </li>
+    <li>
+      <a href="https://all.accor.com/hotel/2894/index.en.shtml" target="_blank">Ibis Warszawa Centrum **</a>
+    </li>
+    <li>
+      <a href="https://www.hotelmdm.com.pl/" target="_blank">MDM Hotel ***</a>
+    </li>
+    <li>
+      <a href="https://all.accor.com/hotel/3383/index.en.shtml" target="_blank">Novotel Warszawa Centrum ****</a>
+    </li>
   </ul>
 
+  <h3 class="my-4">Restaurants</h3>
+  <p>The following restaurants are close the Faculty of Physics:</p>
+  <ul>
+    <li><a href="https://maps.app.goo.gl/UMUPHwEFMBkQjjmC6" target="_blank">Cafeteria of the Faculty of Biology</a>: Cheap and good local food.</li>
+    <li><a href="https://maps.app.goo.gl/RN9zxWCicdrsJ6yu8" target="_blank">Jeff's</a>: American food.</li>
+    <li><a href="https://maps.app.goo.gl/mRF8jq16tQ8keyt3A" target="_blank">Kuchnia Za Ścianą</a>: Polish food.</li>
+  </ul>
+	<p>The following restaurants are around the city center and serve local food:</p>
+  <ul>
+    <li><a href="https://maps.app.goo.gl/hcbmQ9y8EbVBNybTA" target="_blank">U Szwejka</a>. This restaurant is located in Plac Konstytucji, right below the MDM Hotel.</li>
+    <li><a href="https://maps.app.goo.gl/TBAnQJajrUYZcwn79" target="_blank">Zapiecek</a>. There are many Zapiecek restaurants in Warsaw. This one is located next to the old town. Their speciality are <em>pierogi</em>.</li>
+    <li><a href="https://maps.app.goo.gl/u28tzAd3hvmj9R3n9" target="_blank">Syrena Irena</a>. This restaurant is placed next to the statue of Copernicus, in Nowy Świat.</li>
+    <li><a href="https://maps.app.goo.gl/DUNKgo6vFcwnHcE1A" target="_blank">Lokal Vegan Bistro</a>. A vegan restaurant close to the Palace of Culture and Science.</li>
+  </ul>
 </div>
 
 <div class="container-fluid footer mt-5 pt-3 pb-1">
