--- a/18ywgmc/schedule/index.html
+++ b/18ywgmc/schedule/index.html
@@ -10,14 +10,14 @@
 
 	<link rel="stylesheet" type="text/css" href="./../style.css">
 
-	<title>XVIII International Young Researchers Workshop in Geometry, Mechanics and Control</title>
+	<title>XVIII International Young Researchers Workshop in Geometry, Dynamics and Field Theory</title>
 </head>
 <body>
 
 
 <div class="container-fluid head">
 	<div class="container pt-5">
-		<h1 class="display-4 main-title text-center"><strong>XVIII International Young Researchers Workshop in Geometry, Mechanics and Control</strong></h1>
+		<h1 class="display-4 main-title text-center"><strong>XVIII International Young Researchers Workshop in Geometry, Dynamics and Field Theory</strong></h1>
 	</div>
 </div>
 
@@ -45,7 +45,7 @@
           <a class="nav-link" href="./../participants/index.html" aria-disabled="true">Participants</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Travel and accomodation</a>
+          <a class="nav-link" href="./../travel-accomodation/index.html" aria-disabled="true">Travel and accomodation</a>
         </li>
       </ul>
     </div>
@@ -177,12 +177,14 @@
   </table>
 </div>
 
+The conference dinner will take place on February 22nd in <a href="https://podwale25.pl/index.php" target="_blank">Kompania Piwna</a>, at 20:00. The address is <a href="https://maps.app.goo.gl/bdSNeuuPhk3HPyxP6" target="_blank">Podwale 25, 00-261 Warsaw, Poland</a>. The organizers will go to the restaurant from the <a href="https://maps.app.goo.gl/BYCaxxTYqoatsBhj8" target="_blank">MDM Hotel</a> located in Plac Konstytucji at 19:15.
+
 </div>
 
 
 <div class="container-fluid footer mt-5 pt-3 pb-1">
   <div class="container text-center">
-    <p class="fs-6">XVIII International Young Researchers Workshop in Geometry, Mechanics and Control<br>
+    <p class="fs-6">XVIII International Young Researchers Workshop in Geometry, Dynamics and Field Theory<br>
     18ywgmc(at)gmail.com</p>
   </div>
 </div>
