--- a/gamma/index.html
+++ b/gamma/index.html
@@ -77,6 +77,7 @@
 					<li>Tymon Frelik (University of Warsaw)</li>
 					<li>Jordi Gaset Rifà (Polytechnic University of Madrid)</li>
 					<li>Jacek Wojciech Hann (University of Warsaw)</li>
+					<li>Jakub Jurczak (University of Warsaw)</li>
 					<li>Julia Lange (University of Warsaw)</li>
 					<li>Asier López Gordón (Instituto de Ciencias Matemáticas)</li>
 					<li>Adam Maskalaniec (University of Warsaw)</li>
