--- a/gamma/index.html
+++ b/gamma/index.html
@@ -102,7 +102,7 @@
 
 
 				<div class="accordion" id="accordionExample">
-					<div class="accordion-item">
+<!-- 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading19">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse19" aria-expanded="false" aria-controls="collapse19">
 								<h5>TBA
@@ -114,10 +114,10 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">TBA</p>
-								<!--<strong>Link to the video: </strong><a href='https://youtu.be/Xgs2YiYoLsg' target="_blank">Julia Lange --- Slicing of Hamiltonian systems</a>-->
+								<strong>Link to the video: </strong><a href='https://youtu.be/Xgs2YiYoLsg' target="_blank">Julia Lange --- Slicing of Hamiltonian systems</a>
 							</div>
 						</div>
-					</div>
+					</div> -->
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading18">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse18" aria-expanded="false" aria-controls="collapse18">
