--- a/18ywgmc/index.html
+++ b/18ywgmc/index.html
@@ -72,7 +72,7 @@
 		<li>TBA</li>
 	</ul>
 
-	<h3>Organizing comitee:</h3>
+	<h3>Organizing committee:</h3>
 	<ul>
 		<li><a href="https://delucasaraujo.wixsite.com/uniwersytet" target="_blank">Javier de Lucas</a> (University of Warsaw, Poland)</li>
 		<li><a href="https://xavirivas.com/" target="_blank">Xavier Rivas</a> (International University of La Rioja, Spain)</li>
@@ -81,7 +81,7 @@
 		<li>Adam Maskalaniec (University of Warsaw, Poland)</li>
 	</ul>
 	
-	<h3>Scientific comitee:</h3>
+	<h3>Scientific committee:</h3>
 	<ul>
 		<li dir="ltr"><a href="http://dma.aq.upm.es/profesor/barbero_m/" target="_blank" rel="noopener noreferrer">María Barbero</a> (Universidad Politécnica de Madrid, Spain)</li>
 		<li dir="ltr"><a href="https://sites.google.com/view/aronna/home?pli=1" target="_blank">Soledad Arona</a> (Escola de Matemática Aplicada, Rio de Janeiro, Brazil)</li>
