--- a/index.html
+++ b/index.html
@@ -44,19 +44,24 @@
 						<dt class="col-sm-2">web page</dt>
 						<dd class="col-sm-10">
 							<a href="http://xavirivas.com">xavirivas.com</a>
-							<br>
-							<a href="https://web.mat.upc.edu/xavier.rivas/">web.mat.upc.edu/xavier.rivas</a>
+							<!-- <br>
+							<a href="https://web.mat.upc.edu/xavier.rivas/">web.mat.upc.edu/xavier.rivas</a> -->
 						</dd>
 						<dt class="col-sm-2">ORCID code</dt>
 						<dd class="col-sm-10"><div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://orcid.org/0000-0002-4175-5157" href="https://orcid.org/0000-0002-4175-5157" target="orcid.widget" rel="me noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">0000-0002-4175-5157</a></div></dd>
+						<dt class="col-sm-2">ResearcherID</dt>
+						<dd class="col-sm-10"><a href="https://www.webofscience.com/wos/author/record/32901988" target="_blank">GQI-1759-2022</a></dd>
+						<dt class="col-sm-2">MR Author ID</dt>
+						<dd class="col-sm-10"><a href="https://mathscinet.ams.org/mathscinet/MRAuthorID/1375865" target="_blank">1375865</a></dd>
+						<dt class="col-sm-2">Scopus ID</dt>
+						<dd class="col-sm-10"><a href="https://www.scopus.com/authid/detail.uri?authorId=57215094927" target="_blank">57215094927</a></dd>
 						<dt class="col-sm-2">Other links</dt>
-						<dd class="col-sm-10"><a href="https://arxiv.org/a/rivas_x_1.html" target="_blank">arxiv.org</a><br>
-						<a href="https://www.researchgate.net/profile/Xavier-Rivas-2" target="_blank">ResearchGate</a><br>
-						<a href="https://scholar.google.es/citations?user=MyVZoPMAAAAJ" target="_blank">Google Scholar</a><br>
-						<a href="https://www.webofscience.com/wos/author/record/32901988" target="_blank">Web Of Science</a><br>
-						<a href="https://mathscinet.ams.org/mathscinet/MRAuthorID/1375865" target="_blank">MathSciNet</a><br>
-						<a href="https://www.scopus.com/authid/detail.uri?authorId=57215094927" target="_blank">Scopus</a><br>
-						<a href="https://www.zotero.org/xrivas" target="_blank">Zotero</a></dd>
+						<dd class="col-sm-10">
+							<a href="https://scholar.google.es/citations?user=MyVZoPMAAAAJ" target="_blank">Google Scholar</a><br>
+							<a href="https://www.researchgate.net/profile/Xavier-Rivas-2" target="_blank">ResearchGate</a><br>
+							<a href="https://arxiv.org/a/rivas_x_1.html" target="_blank">arxiv.org</a><br>
+							<a href="https://www.zotero.org/xrivas" target="_blank">Zotero</a>
+						</dd>
 					</dl>
 					
 				</div>
