--- a/18ywgmc/index.html
+++ b/18ywgmc/index.html
@@ -67,8 +67,8 @@
 	
 	<h3>Courses:</h3>
 	<ul>
-		<li>TBA</li>
-		<li>TBA</li>
+		<li>María Amelia Salazar. <em><a href="./program/index.html#C_Salazar">Van est maps: the relation between the cohomology of Lie groups and the cohomology of Lie algebras</a></em></li>
+		<li>Leonardo Colombo. <em><a href="./program/index.html#C_Colombo">Safety-guarantees with data-driven controls based on  Gaussian processes for quadrotors UAVs and multi-agent systems</a></em></li>
 		<li>TBA</li>
 	</ul>
 
