--- a/18ywgmc/schedule/index.html
+++ b/18ywgmc/schedule/index.html
@@ -79,9 +79,9 @@
       </tr>
       <tr>
         <th scope="row" class="align-middle">09:00 - 09:30</th>
-        <td rowspan="3" class="align-middle table-primary">Course 1</td>
-        <td rowspan="3" class="align-middle table-success">Course 2</td>
-        <td rowspan="2" class="align-middle table-primary">Course 1</td>
+        <td rowspan="3" class="align-middle table-primary"><a href="./../program/index.html#C_Salazar">M. A. Salazar</a></td>
+        <td rowspan="3" class="align-middle table-success"><a href="./../program/index.html#C_Colombo">L. Colombo</a></td>
+        <td rowspan="2" class="align-middle table-primary"><a href="./../program/index.html#C_Salazar">M. A. Salazar</a></td>
       </tr>
       <tr>
         <th scope="row" class="align-middle">09:30 - 10:00</th>
@@ -98,7 +98,7 @@
       </tr>
       <tr>
         <th scope="row" class="align-middle">11:00 - 11:30</th>
-        <td rowspan="3" class="align-middle table-success">Course 2</td>
+        <td rowspan="3" class="align-middle table-success"><a href="./../program/index.html#C_Colombo">L. Colombo</a></td>
         <td rowspan="3" class="align-middle table-danger">Course 3</td>
       </tr>
       <tr>
@@ -129,7 +129,7 @@
       <tr>
         <th scope="row" class="align-middle">14:30 - 15:00</th>
         <td rowspan="3" class="align-middle table-danger">Course 3</td>
-        <td rowspan="3" class="align-middle table-primary">Course 1</td>
+        <td rowspan="3" class="align-middle table-primary"><a href="./../program/index.html#C_Salazar">M. A. Salazar</a></td>
       </tr>
       <tr>
         <th scope="row" class="align-middle">15:00 - 15:30</th>
@@ -145,7 +145,7 @@
       <tr>
         <th scope="row" class="align-middle">16:30 - 17:00</th>
         <td rowspan="2" class="align-middle table-info">Gong session</td>
-        <td rowspan="2" class="align-middle table-success">Course 2</td>
+        <td rowspan="2" class="align-middle table-success"><a href="./../program/index.html#C_Colombo">L. Colombo</a></td>
       </tr>
       <tr>
         <th scope="row" class="align-middle">17:00 - 17:30</th>
