--- a/18ywgmc/index.html
+++ b/18ywgmc/index.html
@@ -10,7 +10,7 @@
 
 	<link rel="stylesheet" type="text/css" href="./style.css">
 
-	<title>XVIII International Young Researchers Workshop in Geometry, Mechanics and Control</title>
+	<title>XVIII International Young Researchers Workshop in Geometry, Dynamics and Field theory</title>
 </head>
 <body>
 
