--- a/gamma/index.html
+++ b/gamma/index.html
@@ -102,22 +102,22 @@
 
 
 				<div class="accordion" id="accordionExample">
-<!-- 					<div class="accordion-item">
+					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading19">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse19" aria-expanded="false" aria-controls="collapse19">
 								<h5>TBA
 								<br>
-								Tomasz Sobczak &#8213; 02/11/2023, 21:00</h5>
+								Adam Maskalaniec &#8213; 02/11/2023, 21:00</h5>
 							</button>
 						</h3>
 						<div id="collapse19" class="accordion-collapse collapse" aria-labelledby="heading19" data-bs-parent="#accordionExample">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">TBA</p>
-								<strong>Link to the video: </strong><a href='https://youtu.be/Xgs2YiYoLsg' target="_blank">Julia Lange --- Slicing of Hamiltonian systems</a>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/Xgs2YiYoLsg' target="_blank">Julia Lange --- Slicing of Hamiltonian systems</a> -->
 							</div>
 						</div>
-					</div> -->
+					</div>
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading18">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse18" aria-expanded="false" aria-controls="collapse18">
@@ -146,7 +146,7 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">This course surveys some of the most relevant geometric structures appearing in modern differential geometric theories: Poisson, symplectic, Dirac, Jacobi, multisymplectic, and k-symplectic manifolds. Next, we introduce the notion of Lie system, i.e. a nonautonomous system of first-order differential equations whose general solution can be described as a function, the superposition rule, of a particular generic family of particular solutions and some constants. The use of geometric structures for the calculation of superposition rules and constants of motion for Lie systems is to be analysed. Applications of the theory to systems of ordinary and partial differential equations of physical and mathematical relevance will be studied. Among other applications, we plan to look into nonautonomous frequency Smorodinsky-Winternitz oscillators, types of diffusion equations, and Backlund transformations for sine-Gordon equations.</p>
-								<!--<strong>Link to the video: </strong><a href='https://youtu.be/5ncwtC3JW_8' target="_blank">Javier de Lucas --- Introduction to Lie Systems with Compatible Geometric Structures III</a>-->
+								<strong>Link to the video: </strong><a href='https://youtu.be/hVdJOSmNjxo' target="_blank">Javier de Lucas --- Introduction to Lie Systems with Compatible Geometric Structures III</a>
 							</div>
 						</div>
 					</div>
