--- a/gamma/index.html
+++ b/gamma/index.html
@@ -105,7 +105,7 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading19">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse19" aria-expanded="false" aria-controls="collapse19">
-								<h5>TBA
+								<h5>Introduction to Category Theory II
 								<br>
 								Adam Maskalaniec &#8213; 02/11/2023, 21:00</h5>
 							</button>
@@ -113,7 +113,7 @@
 						<div id="collapse19" class="accordion-collapse collapse" aria-labelledby="heading19" data-bs-parent="#accordionExample">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
-								<p class="text-justify">TBA</p>
+								<p class="text-justify">In this talk I am going to introduce the formalism of category theory. In particular, functors, natural transformations, limits and adjoint functors will be defined. Furthermore, I will prove two basic categorical results, namely Yoneda’s lemma and Freyd theorem. All notions will be illustrated with examples from different branches of mathematics.</p>
 								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/Xgs2YiYoLsg' target="_blank">Julia Lange --- Slicing of Hamiltonian systems</a> -->
 							</div>
 						</div>
@@ -121,7 +121,7 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading18">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse18" aria-expanded="false" aria-controls="collapse18">
-								<h5>TBA
+								<h5>Introduction to Category Theory I
 								<br>
 								Adam Maskalaniec &#8213; 26/10/2023, 21:00</h5>
 							</button>
@@ -129,7 +129,7 @@
 						<div id="collapse18" class="accordion-collapse collapse" aria-labelledby="heading18" data-bs-parent="#accordionExample">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
-								<p class="text-justify">TBA</p>
+								<p class="text-justify">In this talk I am going to introduce the formalism of category theory. In particular, functors, natural transformations, limits and adjoint functors will be defined. Furthermore, I will prove two basic categorical results, namely Yoneda’s lemma and Freyd theorem. All notions will be illustrated with examples from different branches of mathematics.</p>
 								<!--<strong>Link to the video: </strong><a href='https://youtu.be/Xgs2YiYoLsg' target="_blank">Julia Lange --- Slicing of Hamiltonian systems</a>-->
 							</div>
 						</div>
