--- a/gamma/index.html
+++ b/gamma/index.html
@@ -130,7 +130,7 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">In this talk I am going to introduce the formalism of category theory. In particular, functors, natural transformations, limits and adjoint functors will be defined. Furthermore, I will prove two basic categorical results, namely Yoneda’s lemma and Freyd theorem. All notions will be illustrated with examples from different branches of mathematics.</p>
-								<!--<strong>Link to the video: </strong><a href='https://youtu.be/Xgs2YiYoLsg' target="_blank">Julia Lange --- Slicing of Hamiltonian systems</a>-->
+								<strong>Link to the video: </strong><a href='https://youtu.be/S1NI387u7co' target="_blank">Adam Maskalaniec --- Introduction to category theory</a>
 							</div>
 						</div>
 					</div>
