--- a/18ywgmc/index.html
+++ b/18ywgmc/index.html
@@ -60,9 +60,9 @@
 
 	<h3>Location and dates:</h3>
 	<ul>
-		<li><strong>Where:</strong> Room 1.03. Faculty of Physics, University of Warsaw, Poland.</li>
+		<li><strong>Where:</strong> The conference will take place in Room 1.03, in the first floor of the <a href="https://www.fuw.edu.pl/" target="_blank">Faculty of Physics</a> of the <a href="https://en.uw.edu.pl/" target="_blank">University of Warsaw</a>, located in <a href="https://maps.app.goo.gl/nY6qrgEo3nPAKbkP7" target="_blank">Ludwika Pasteura 5, 02-093 Warsaw, Poland.</a></li>
 		<li><strong>When:</strong> February 21-23, 2024</li>
-		<li><strong>How:</strong> Registration opens in October</li>
+		<li><strong>How:</strong> The registration instructions can be found <a href="./registration/index.html" aria-disabled="true">here</a>.</li>
 		<li><strong>Other questions?</strong> Contact us at <a href = "mailto: 18ywgmc@gmail.com">18ywgmc(at)gmail.com</a></li>
 	</ul>
 	
