--- a/18ywgmc/program/index.html
+++ b/18ywgmc/program/index.html
@@ -58,8 +58,9 @@
 
 	<h1 class="mb-3">Program</h1>
 
+  <p>The conference will consist in three courses given by renowned researchers, several short talks aimed at young researchers, a gong session, and a poster session.</p>
 
-  You can download the program <a href="">here</a>.
+  <!-- You can download the program <a href="">here</a>. -->
 
   <h3 class="my-4">Courses</h3>
   
