--- a/18ywgmc/participants/index.html
+++ b/18ywgmc/participants/index.html
@@ -104,6 +104,34 @@
       <td>Uniwersytet Warszawski</td>
       <td>Poland</td>
     </tr>
+    <tr>
+      <th scope="row">6</th>
+      <td>Leonardo</td>
+      <td>Colombo</td>
+      <td>Centre for automation and robotics</td>
+      <td>Spain</td>
+    </tr>
+    <tr>
+      <th scope="row">7</th>
+      <td>Omayra</td>
+      <td>Yago Nieto</td>
+      <td>Universidad Complutense de Madrid</td>
+      <td>Spain</td>
+    </tr>
+    <tr>
+      <th scope="row">8</th>
+      <td>Efstratios</td>
+      <td>Stratoglou</td>
+      <td>Universidad Politécnica de Madrid</td>
+      <td>Spain</td>
+    </tr>
+    <tr>
+      <th scope="row">9</th>
+      <td>Asier</td>
+      <td>López-Gordón</td>
+      <td>ICMAT-CSIC</td>
+      <td>Spain</td>
+    </tr>
   </tbody>
 </table>
 
