--- a/18ywgmc/index.html
+++ b/18ywgmc/index.html
@@ -68,9 +68,9 @@
 	
 	<h3>Courses:</h3>
 	<ul>
-		<li>María Amelia Salazar. <em><a href="./program/index.html#C_Salazar">Van est maps: the relation between the cohomology of Lie groups and the cohomology of Lie algebras</a></em></li>
-		<li>Leonardo Colombo. <em><a href="./program/index.html#C_Colombo">Safety-guarantees with data-driven controls based on  Gaussian processes for quadrotors UAVs and multi-agent systems</a></em></li>
-		<li>TBA</li>
+		<li>María Amelia Salazar (Universidade Federal Fluminense, Brazil)<br><em><a href="./program/index.html#C_Salazar">Van est maps: the relation between the cohomology of Lie groups and the cohomology of Lie algebras</a></em></li>
+		<li>Leonardo Colombo (Centre for Automation and Robotics CSIC-UPM, Spain)<br><em><a href="./program/index.html#C_Colombo">Safety-guarantees with data-driven controls based on  Gaussian processes for quadrotors UAVs and multi-agent systems</a></em></li>
+		<li>Mats Vermeeren (Loughborough University, United Kingdom)<br><em><a href="./program/index.html#C_Vermeeren">Hamiltonian and Lagrangian perspectives on integrable systems</a></em></li>
 	</ul>
 
 	<h3>Organizing committee:</h3>
