--- a/18ywgmc/participants/index.html
+++ b/18ywgmc/participants/index.html
@@ -132,6 +132,20 @@
       <td>ICMAT-CSIC</td>
       <td>Spain</td>
     </tr>
+    <tr>
+      <th scope="row">10</th>
+      <td>María Amelia</td>
+      <td>Salazar</td>
+      <td>Universidade Federal Fluminense</td>
+      <td>Brazil</td>
+    </tr>
+    <tr>
+      <th scope="row">11</th>
+      <td>Mats</td>
+      <td>Vermeeren</td>
+      <td>Loughborough University</td>
+      <td>United Kingdom</td>
+    </tr>
   </tbody>
 </table>
 
