--- a/18ywgmc/program/index.html
+++ b/18ywgmc/program/index.html
@@ -78,10 +78,10 @@
 
   <p class="mb-5">In recent years, there have been advances in the use of RL to learn dynamical systems and design controllers driven by data. Nevertheless, for complex nonlinear dynamics such as the coordinated motion of multiple mechanical systems, the training with RL does not provide an uncertainty quantification of the prediction outputs and can have difficulty generalizing from sparse data. For this reason, in this mini-course, we focus on modeling with Gaussian Process Regression (GPR), a supervised learning technique based on GPs, so that the online learning provides a quantified uncertainty of the prediction and also provides training and update of predictions in real-time in comparison with classical NNs and RL. This uncertainty calculation is very valuable because it provides probabilistic safety guarantees for the system, that is, it provides probabilistic error bounds for the predictions using GPs that can be used, for instance, as ultimate bounds for the tracking error of autonomous vehicles to reach a desired trajectory which is the main application we will explore in the mini course.</p>
   
-  <h6 class="mt-4"><a href="">TBA</a> (TBA)</h6>
-  <p><em>Title:</em> TBA</p>
+  <h6 id="C_Vermeeren"  class="mt-4"><a href="">Mats Vermeeren</a> (Loughborough University)</h6>
+  <p><em>Title:</em> Hamiltonian and Lagrangian perspectives on integrable systems</p>
   <em>Abstract:</em>
-  <p class="mb-5">TBA</p>
+  <p class="mb-5">Classical integrable systems are traditionally formulated in terms of Hamiltonian mechanics. We will review this perspective, with the Liouville-Arnold theorem as a key result, and contrast it with a much more recent approach to integrable systems based on Lagrangian mechanics. The central objects in this approach are known as "Lagrangian multiforms" or "pluri-Lagrangian systems". After developing both perspectives for integrable ODEs, we will briefly discuss some other versions of Lagrangian multiform theory, applicable to integrable PDEs, differential-difference equations, and fully discrete lattice equations.</p>
 
   <h3 class="my-4">Short talks</h3>
   
