--- a/18ywgmc/schedule/index.html
+++ b/18ywgmc/schedule/index.html
@@ -99,11 +99,11 @@
       <tr>
         <th scope="row" class="align-middle">11:00 - 11:30</th>
         <td rowspan="3" class="align-middle table-success"><a href="./../program/index.html#C_Colombo">L. Colombo</a></td>
-        <td rowspan="3" class="align-middle table-danger">Course 3</td>
+        <td rowspan="3" class="align-middle table-danger"><a href="./../program/index.html#C_Vermeeren">M. Vermeeren</a></td>
       </tr>
       <tr>
         <th scope="row" class="align-middle">11:30 - 12:00</th>
-        <td rowspan="2" class="align-middle table-danger">Course 3</td>
+        <td rowspan="2" class="align-middle table-danger"><a href="./../program/index.html#C_Vermeeren">M. Vermeeren</a></td>
       </tr>
       <tr>
         <th scope="row" class="align-middle">12:00 - 12:30</th>
@@ -128,7 +128,7 @@
       </tr>
       <tr>
         <th scope="row" class="align-middle">14:30 - 15:00</th>
-        <td rowspan="3" class="align-middle table-danger">Course 3</td>
+        <td rowspan="3" class="align-middle table-danger"><a href="./../program/index.html#C_Vermeeren">M. Vermeeren</a></td>
         <td rowspan="3" class="align-middle table-primary"><a href="./../program/index.html#C_Salazar">M. A. Salazar</a></td>
       </tr>
       <tr>
