--- a/gamma/index.html
+++ b/gamma/index.html
@@ -83,7 +83,7 @@
 					<li>Adam Maskalaniec (University of Warsaw)</li>
 					<li>Maksym Matviienko (University of Warsaw)</li>
 					<li>Marek Morawski (University of Warsaw)</li>
-					<!-- <li>Tomasz Sobczak (University of Warsaw)</li> -->
+					<li>Tomasz Sobczak (University of Warsaw)</li>
 					<li>Silvia Souto (University of Santiago de Compostela)</li>
 					<li>Daniel Torres (Polytechnic University of Catalonia)</li>
 					<li>Krzysztof Jan Wolicki (University of Warsaw)</li>
